stage0/tests/compile_fail/types/alias_cyclic.dg
// A self-referential alias chain is rejected rather than looping forever.
alias A = B
alias B = A
func main() -> i32 { 0 }
